plugins/editorconfig/testData/org/editorconfig/language/parser/invalid/malformedVariantWithoutComasWithoutStart.editorconfig
[hello wor ld}or]
key=value
